--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,22 @@
-<div>
-    <label for="user_id">User ID: </label><input type="text" [(ngModel)]="id" >
-    <br>
-    <label for="pass">Password: </label><input type="password" [(ngModel)]="pass" >
-    <br>
-    <button (click)="login()">Login</button>
-</div>
+<section class="position-relative py-4 py-xl-5">
+    <div class="container" style="--bs-body-bg: var(--bs-dark);">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6 col-xl-4">
+                <div class="card bg-secondary border rounded border-0 mb-5">
+                    <div class="card-body bg-secondary border rounded border-0 d-flex flex-column align-items-center" style="--bs-primary-rgb: 2,0,13;--bs-secondary-rgb: 7,32,63;--bs-success-rgb: 241,210,182;--bs-light-rgb: 241,210,182;--bs-dark-rgb: 166,94,70;--bs-body-bg: #3459e6;">
+                        <div class="bs-icon-xl bs-icon-circle text-secondary bg-white bs-icon my-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person">
+                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"></path>
+                            </svg></div>
+                        <form class="text-center" method="post">
+                            <div class="mb-3"><input [(ngModel)]="id" class="border rounded border-1 border-dark shadow-sm form-control form-control-lg" type="email" name="user" placeholder="Username" style="--bs-body-bg: var(--bs-blue);" autocomplete="off" autofocus="" required="" maxlength="20" minlength="1"></div>
+                            <div class="mb-3"><input [(ngModel)]="pass" class="border rounded border-1 border-dark shadow-sm form-control form-control-lg" type="password" name="password" placeholder="Password" autocomplete="off" required="" maxlength="20" minlength="1"></div>
+                            <div class="mb-3">
+                                <div class="btn-group" role="group"><button class="btn btn-primary" type="button" (click)="signUp()">Sign Up</button><button class="btn btn-primary" type="button" (click)="logIn()">Sign In</button></div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
