--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,45 +1,64 @@
 <div>
-    <div>
-        <ul *ngIf="folders.length != 0">
-            <li *ngFor="let folder of folders">
-                <h2>{{folder.name}}</h2>
-                <h3>ToDo</h3>
-                <ul>
-                    <ng-container *ngFor="let task of tasks">
-                        <li *ngIf="!task.completed && task.folder_id == folder.id">
-                            <div>
-                                <input type="checkbox" [checked]="task.completed" (click)="updateTaskState(task)">
-                                <p>{{task.description}}</p>
+    <nav class="navbar navbar-light navbar-expand-md py-3">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary-light text-dark d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-journal-bookmark fs-1">
+                        <path fill-rule="evenodd" d="M6 8V1h1v6.117L8.743 6.07a.5.5 0 0 1 .514 0L11 7.117V1h1v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z"></path>
+                        <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z"></path>
+                        <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z"></path>
+                    </svg></span><span class="text-uppercase">Ensolvers-Todo</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse d-xxl-flex" id="navcol-1">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <h5>{{this._user}}</h5>
+                    </li>
+                </ul>
+                <button class="btn btn-primary" type="button" (click)="logOut()">Logout</button>
+            </div>
+        </div>
+    </nav>
+    <div class="input-group"><span class="input-group-text">Folder</span><input class="form-control" type="text" [(ngModel)]="folder_name"><button class="btn btn-primary" type="button" style="border-radius: 0px;" (click)="addFolder()">Add</button></div>
+</div>
+<div>
+    <ng-container *ngIf="folders.length != 0">
+        <ul class="list-group" *ngFor="let folder of folders">
+            <li class="list-group-item" style="margin-top: 20px;">
+                <div>
+                    <a class="btn btn-primary border rounded-0" data-bs-toggle="collapse" aria-expanded="true" attr.aria-controls="folder_{{folder.id}}" role="button" style="width: 100%;">{{folder.name}}</a>
+                    <div class="collapse show" id="folder_{{folder.id}}"> <!--Folder-->
+                        <div>
+                            <a class="btn btn-primary btn-sm" data-bs-toggle="collapse" aria-expanded="true" attr.aria-controls="todo_{{folder.id}}"  role="button" style="width: 100%;border-radius: 0px;">Todo</a>
+                            <div class="collapse show" id="todo_{{folder.id}}"> <!--Todo Tasks-->
+                                <ng-container *ngFor="let task of tasks">
+                                    <div class="input-group shadow-none" *ngIf="!task.completed && task.folder_id == folder.id">
+                                        <input class="form-check-input checkbox-inline" style="height: 60px; width: 40px; margin: 0;" type="checkbox" [checked]="task.completed" (click)="updateTaskState(task)">
+                                        <input class="form-control indent" type="text" id="{{task.id}}" value ="{{task.description}}" (focusout)="updateTask(task)">
+                                        <button class="btn btn-primary iteration-btn" type="button" (click)="deleteTask(task.id)"><i class="fas fa-times"></i></button>
+                                    </div>
+                                </ng-container>
+                                <div class="input-group border-2 shadow-none" style="margin-top: 5px; margin-bottom: 25px;"> <!--Add Task-->
+                                    <input class="border-0 form-control" type="text" placeholder="New Task" id="{{folder.id}}" onfocus="this.value = ''">
+                                    <button class="btn btn-primary iteration-btn" type="button" (click)="addTask(folder.id)"><i class="fas fa-plus"></i></button>
+                                </div>
                             </div>
-                        </li>
-                    </ng-container>
-                </ul>
-    
-                <h3>Completed</h3>
-                <ul>
-                    <ng-container *ngFor="let task of tasks">
-                        <li *ngIf="task.completed && task.folder_id == folder.id" >
-                            <input type="checkbox" [checked]="task.completed" (click)="updateTaskState(task)">
-                            <p>{{task.description}}</p>
-
-                        </li>
-                    </ng-container>
-                </ul>
-    
+                        </div>
+                        <div>
+                            <a class="btn btn-primary btn-sm" data-bs-toggle="collapse" aria-expanded="true" attr.aria-controls="completed_{{folder.id}}" role="button" style="width: 100%;border-radius: 0px;">Completed</a>
+                            <div class="collapse show" id="completed_{{folder.id}}"> <!--Completed Tasks-->
+                                <ng-container *ngFor="let task of tasks">
+                                    <div class="input-group shadow-none" *ngIf="task.completed && task.folder_id == folder.id">                                        
+                                        <input class="form-check-input" style="height: 60px; width: 40px; margin: 0;" type="checkbox" [checked]="task.completed" (click)="updateTaskState(task)">
+                                        <input class="form-control indent" type="text" id="{{task.id}}" value ="{{task.description}}" disabled>
+                                        <button class="btn btn-primary iteration-btn" type="button" (click)="deleteTask(task.id)"><i class="fas fa-times"></i></button>
+                                    </div>
+                                </ng-container>
+                            </div>
+                        </div>
+                        <div class="text-center" style="margin-top: 15px;">
+                            <a class="btn btn-primary btn-sm" data-bs-toggle="collapse" role="button" style="width: 100%;border-radius: 0px; margin-top: 15px;" (click)="deleteFolder(folder.id)">Delete Folder</a>
+                        </div>
+                    </div>
+                </div>
             </li>
         </ul>
-    </div>
-    <div>
-        <h2>Add Task</h2>
-        <select name="folder" id="folder" [(ngModel)]="sel_folder" >
-            <option value="">Folder:</option>
-            <option *ngFor="let folder of folders" [value]="folder.id">{{folder.name}}</option>
-        </select>
-        <input type="text" value="New Task" [(ngModel)]="task_desc">
-        <button (click)="addTask()" >+</button>
-
-        <h2>Add Folder</h2>
-        <input type="text" value="New Task" [(ngModel)]="folder_name">
-        <button (click)="addFolder()" >+</button>
-    </div>
+    </ng-container>
 </div>
+<div class="text-center" style="margin-top: 15px;"><button class="btn btn-primary btn-sm bg-secondary" type="button" (click)="saveChanges()">Save Changes</button></div>
